--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cortex-m = "0.7.7"
 cortex-m-rt = "0.7.3"
 cortex-m-semihosting = "0.5.0"
 panic-halt = "0.2.0"
+# panic-abort = "0.3.2"
 usb-device = "0.2.9"
 
 [dependencies.stm32f1xx-hal]
