--- a/racing-wheel/Cargo.toml
+++ b/racing-wheel/Cargo.toml
@@ -12,8 +12,8 @@ cortex-m-semihosting = "0.5.0"
 panic-halt = "0.2.0"
 # panic-abort = "0.3.2"
 usb-device = "0.2.9"
-force-feedback = { path = "lib/force-feedback" }
-fixed-num = { path = "lib/fixed-num" }
+force-feedback = { path = "../lib/force-feedback" }
+fixed-num = { path = "../lib/fixed-num" }
 
 [dependencies.stm32f1xx-hal]
 version = "0.10.0"
