--- a/racing-wheel/Cargo.toml
+++ b/racing-wheel/Cargo.toml
@@ -13,6 +13,7 @@ panic-halt = "0.2.0"
 # panic-abort = "0.3.2"
 usb-device = "0.2.9"
 force-feedback = { path = "../lib/force-feedback" }
+usb-hid-device = { path = "../lib/usb-hid-device" }
 fixed-num = { path = "../lib/fixed-num" }
 
 [dependencies.stm32f1xx-hal]
