Move config to new crate

--- a/racing-wheel/Cargo.toml
+++ b/racing-wheel/Cargo.toml
@@ -14,6 +14,7 @@ panic-halt = "0.2.0"
 usb-device = "0.2.9"
 force-feedback = { path = "../lib/force-feedback" }
 usb-hid-device = { path = "../lib/usb-hid-device" }
+config = { path = "../lib/config" }
 micromath = "2.1.0"
 
 [dependencies.stm32f1xx-hal]
