--- a/configurator/Cargo.toml
+++ b/configurator/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 hidapi = "2.6"
 config = { path = "../lib/config" }
+force-feedback = { path = "../lib/force-feedback" }
